# GenPulse

./: .env.example  .gitignore  AGENTS.md  Dockerfile  MQ_CELERY_SUPPORT.md  README.md  README_CN.md  config.yaml  docker-compose.yml  manager.py  pyproject.toml
alembic/: env.py
config/: config.yaml
config/comfy/: extra_model_paths.yaml
core/: comfy_client.py  config.py  db.py  db_manager.py  gateway.py  models.py  mq.py  process_manager.py  registry.py  storage.py  worker.py
docs/: TENCENT_HTTP_FLOW_WALKTHROUGH.md  api.md  architecture_design.md  deploy.md  quickstart.md  roadmap.md  testing_standards.md
docs/dev/: branching_model.md  comfyui_handler_guide.md  diffusers_handler_guide.md  local_testing_guide.md  logging_guide.md  provider_guide.md  testing_guide.md
docs/plans/: 2026-01-19-database-integration.md  2026-01-19-initial-scaffold.md  2026-01-20-db-mq-verification.md  2026-01-20-diffusers-handler.md  2026-01-20-docker-infras.md  2026-01-20-local-comfy.md  2026-01-20-storage-and-comfy.md  2026-01-23-task-request-optimization.md  2026-01-23-tencent-t2i-handler.md  2026-01-24-tencent-http-polling-flow-test.md  2026-01-28-optimization-and-expansion.md  2026-01-28-reliability-and-flow-control.md  20260128_dual_mode_architecture.md
handlers/: base.py  comfy_handler.py  diffusers_handler.py  z_image.py
scripts/: generate_openapi.py  manage_comfy.sh  manage_infra.py
src/genpulse/: __main__.py  admin.py  app.py  cli.py  config.py  processing.py  tasks.py  types.py  worker.py
src/genpulse/clients/: base.py
src/genpulse/engines/: base.py  comfy_engine.py  diffusers_engine.py
src/genpulse/features/: registry.py
src/genpulse/handlers/: base.py  comfy_handler.py  image.py  registry.py  video.py
src/genpulse/infra/: log.py  rate_limiter.py  storage.py
src/genpulse/routers/: storage.py  (+1 more)
tests/: conftest.py
tests/clients/: test_comfy_client.py
tests/core/: test_mq.py  test_process_manager.py
tests/engines/: test_comfy_engine.py  test_diffusers_engine.py
tests/infra/: test_celery_mq.py  test_rabbitmq.py
tests/integration/: test_comfy_workflow.py  test_diffusers_handler.py  test_gateway_workflow.py
tests/unit/: test_smoke.py
(+42 files in other folders)
